--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
 .header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/WhatsApp\ Image\ 2024-06-14\ at\ 16.55\ Background\ Removed.29\ \(1\).png);
+    /* background-image: url(images/WhatsApp\ Image\ 2024-06-14\ at\ 16.55\ Background\ Removed.29\ \(1\).png); */
     background-size: cover;
     background-position: bottom 5px right -300px;
 }
@@ -329,7 +329,7 @@ nav .fa-circle-xmark{
 
 @media only screen and (max-width:600px){
     .header{
-        background-image: url(images/WhatsApp\ Image\ 2024-06-14\ at\ 16.55\ Background\ Removed.29\ \(1\).png);
+        /* background-image: url(images/WhatsApp\ Image\ 2024-06-14\ at\ 16.55\ Background\ Removed.29\ \(1\).png); */
         background-size: cover;
         background-position: bottom 5px right -600px;
     }
